update seeds, css scrollbar attempt to fix

--- a/app/assets/stylesheets/components/messages.scss
+++ b/app/assets/stylesheets/components/messages.scss
@@ -32,5 +32,15 @@
   height: 5em;
   width: 35em;
   resize: none;
+  overflow: auto;
   position: relative;
+}
+
+.position-chat {
+  z-index: 1;
+  position: absolute;
+  bottom: 2vh;
+}
+.box::-webkit-scrollbar {
+  display: none;
 }
